# pyecs

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  LICENSE  Pipfile  README.md  pyecs.py  pyproject.toml  setup.cfg  setup.py  tests.py
.github/workflows/: python-lint.yml  python-package.yml  python-publish.yml  python-test.yml
ecs/: __init__.py  components.py  core.py  datatypes.py  systems.py
pyecs/: __init__.py  __init__.pyi  __version__.py  components.py  core.py  datatypes.py  systems.py
test/: test_core.py  test_datatypes.py  test_prebuilt.py  test_version.py
