[tool.poetry]
name = "pyecs"
version = "0.19"
description = "A simple implementation of the Entity-Component pattern."
authors = ["Tim Fischer <me@timfi.dev>"]
readme = "README.md"
homepage = "https://github.com/timfi/pyecs"
repository = "https://github.com/timfi/pyecs"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]
packages = [{ include = "pyecs" }]
include = ["py.typed", "*.pyi"]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = { version = "^5.4.1", optional = true }

[tool.poetry.extras]
yaml = ["pyyaml"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"
mypy = "^0.812"
pre-commit = "^2.12.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pyproject-flake8 = "^0.0.1-alpha.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tools.flake8]
extend-ignore = "E203,E266,E501,W503"
max-line-length = 88
max-complexity = 18