[metadata]
name = pyecs
version = attr: pyecs.__version__
description = A simple implementation of the Entity-Component pattern.
url = https://github.com/tim-fi/pyecs
author = Tim Fischer
author_email = me@timfi.dev
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    Topic :: Games/Entertainment
    Typing :: Typed

[options]
zip_safe = False
include_package_data = True
py_modules = pyecs
python_requires = >=3.8

[bdist_wheel]
universal = 1

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=pyecs.py,tests.py
ignore_missing_imports=true

[tool:pytest]
testpaths=tests.py

[pydocstyle]
match_dir=pyecs
match=pyecs.py